# par2cmdline

./: .clangd  .editorconfig  .editorconfig-checker.json  .gitattributes  .gitignore  .travis.yml  0.CuPar.code-workspace  AUTHORS  CMakeConfig.h.in  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  PORTING  Package.swift  README  README.md  ROADMAP  aclocal.m4  automake.sh  commandline.cpp  commandline.h  config.h.in  configure  configure.ac  crc.cpp  crc.h  creatorpacket.cpp  creatorpacket.h  criticalpacket.cpp  criticalpacket.h  datablock.cpp  datablock.h  depcomp  descriptionpacket.cpp  descriptionpacket.h  diskfile.cpp  diskfile.h  (+52 more)
.github/workflows/: build-check-freebsd.yml  build-check-linux.yml  build-check-macos.yml  build-check-windows.yml  build-check.yml  build-push.yml  build-release.yml
man/: par2.1
src/: commandline.cpp  commandline.h  commandline_test.cpp  crc.cpp  crc.h  crc_test.cpp  creatorpacket.cpp  creatorpacket.h  criticalpacket.cpp  criticalpacket.h  criticalpacket_test.cpp  datablock.cpp  descriptionpacket.cpp  descriptionpacket.h  descriptionpacket_test.cpp  diskfile.cpp  diskfile.h  diskfile_test.cpp  filechecksummer.cpp  filechecksummer.h  galois.cpp  galois.h  galois_cu.cu  galois_cu.cuh  galois_cu_test.cu  galois_test.cpp  helper_cuda.cuh  letype_test.cpp  libpar2.cpp  libpar2.h  libpar2_test.cpp  libpar2internal.h  mainpacket.cpp  mainpacket.h  md5.cpp  md5.h  md5_test.cpp  par1fileformat.cpp  par1fileformat.h  par1repairer.cpp  (+30 more)
tests/: build_unit_tests.ps1  commandline_test.vcxproj  crc_test.vcxproj  criticalpacket_test.vcxproj  descriptionpacket_test.vcxproj  diskfile_test.vcxproj  flatdata-filelist.txt  galois_test.vcxproj  generate-block-count-wrap-fixture.py  letype_test.vcxproj  libpar2_test.vcxproj  md5_test.vcxproj  posttest  pretest  reedsolomon_test.vcxproj  run_tests.ps1  subdirdata-filelist.txt  subdirdata-folder-filelist.txt  subdirdata-partial-filelist.txt  test1  test1.ps1  test10  test10.ps1  test11  test11.ps1  test12  test12.ps1  test13  test13.ps1  test14  test14.ps1  test15  test15.ps1  test16  test16.ps1  test17  test17.ps1  test18  test18.ps1  test19  (+72 more)
tests/testcollision/: 2mb_0s.bin.par2  2mb_col.bin.par2  pattern16.bin.par2
